# mini_cooper_dashboard

./: .gitignore  .gitmodules  7in.afdesign  CMakeLists.txt  CMakeLists.txt.external  esp32-s3-devkitc-1-myboard.json  huge_app.csv  lv_conf.h  notes.txt  platformio.ini  r53-can.txt  r53_can.h  r53_dash.code-workspace  readme.md  sim.c  start_rasp3.sh  test.c
device/: CMakeLists.txt  main.c
include/: ffconf.h  lv_conf.h  lv_drv_conf.h
lib/e46/: e46.c  e46.dbc  e46.h  readme.md
lib/r53/: r53.c  r53.dbc  r53.h  readme.md
raspi/: CMakeLists.txt  CMakeLists.txt.old  Config.mk  Makefile  can_serial.cpp  can_serial.h  cdash.cpp  cdash.h  kernel.cpp  kernel.h  lv_conf.h  raspi.cpp
research/: r53-can.txt
research/ESP32_Dispaly_7.0_module-SCH+PCB_schematic/: WZ8048C070-V1.1-20230407.brd  WZ8048C070-V1.1-20230407.sch
serial_sender/: ASC_view.sdf  CMakeLists.txt  data10.txt  data4.txt  data7.txt  data8.txt  data9-test.txt  data9-test2.txt  data9.txt  first_data.txt  first_data2.txt  ini.c  log_00000005.txt  log_00000007.crtd  log_00000009.crtd  log_00000010.crtd  log_00000011.crtd  log_00000013.crtd  log_00000019.crtd  log_5.csv  log_5_153.csv  main.c
serial_sender/logs/: log_00000001_old.crtd  log_00000003.crtd  log_00000004.crtd  log_00000006.crtd  log_00000007.crtd  log_00000008.crtd  log_00000010.crtd  log_00000013.crtd  log_00000014.crtd  log_00000018.crtd  log_00000019.crtd  log_00000020.crtd  log_00000021.crtd  log_00000022.crtd  log_00000023.crtd  log_00000024.crtd  log_00000025.crtd  log_00000026.crtd  log_00000027.crtd  log_00000028.crtd  log_00000029.crtd  log_00000030.crtd  log_00000031.crtd  log_00000032.crtd  log_00000033.crtd  log_00000034.crtd  log_00000035.crtd  log_00000036.crtd  log_00000037.crtd  log_00000038.crtd  log_00000039.crtd  log_00000040.crtd  log_00000041.crtd  log_00000042.crtd  log_00000043.crtd  log_00000044.crtd  log_00000045.crtd  log_00000046.crtd  log_00000047.crtd  log_00000048.crtd  (+115 more)
serial_sender/old_logs/: data10-test.txt  data4.txt  data6.txt  data8.txt  data9-test.txt  data9-test3.txt  data9.txt  log_00000003.txt  log_00000005.txt  log_00000006.txt  log_00000012.crtd  log_00000014.crtd  log_00000017.crtd  log_00000018.crtd  log_0000001A.crtd  log_0000001B.crtd  log_0000001C.crtd  log_0000001D.crtd  log_0000001E.crtd  log_0000001F.crtd  log_00000020.crtd  log_00000021.crtd  log_00000022.crtd  log_00000023.crtd  log_00000024.crtd  log_00000025.crtd  log_00000026.crtd  log_00000027.crtd  log_00000028.crtd  log_00000029.crtd  log_0000002A.crtd  log_0000002B.crtd  second_data.txt  third_data.xt
simulation/: CMakeLists.txt  dev.cpp  main.c  main.cpp  sd_card.cpp  sd_card.h
src/: accel.cpp  accel.hpp  activity.c  activity.h  bit_table.cpp  bit_table.hpp  can.c  can.h  car_view.c  car_view.cpp  car_view.h  car_view.hpp  clock.c  clock.cpp  clock.h  clock.hpp  coolant.c  coolant.cpp  coolant.h  coolant.hpp  dash.c  dash.cpp  dash.d  dash.h  dash.mk  dev.cpp  dev.h  effect.c  effect.h  font.h  fuel.cpp  fuel.hpp  gas.c  gas.h  gauge.cpp  gauge.hpp  log.cpp  log.h  main.c  main.cpp  (+54 more)
src/assets/: car_view.c  car_view_fill.c  door_left.c  door_right.c  foglights.c  gas_cap.c  headlights.c  hood.c  slice1.c  slice10.c  slice11.c  slice12.c  slice13.c  slice14.c  slice15.c  slice2.c  slice3.c  slice5.c  slice6.c  slice7.c  slice8.c  slice9.c  sunroof.c  trunk.c
